sys/wasapi/gstwasapisrc.c
@@ -183,7 +183,7 @@ gst_wasapi_src_finalize (GObject * object)
 
   g_clear_pointer (&self->cached_caps, gst_caps_unref);
   g_clear_pointer (&self->positions, g_free);
-  g_clear_pointer (&self->device, g_free);
+  g_clear_pointer (&self->device_strid, g_free);
 
   G_OBJECT_CLASS (parent_class)->finalize (object);
 }
@@ -201,8 +201,8 @@ gst_wasapi_src_set_property (GObject * object, guint prop_id,
     case PROP_DEVICE:
     {
       const gchar *device = g_value_get_string (value);
-      g_free (self->device);
-      self->device =
+      g_free (self->device_strid);
+      self->device_strid =
           device ? g_utf8_to_utf16 (device, -1, NULL, NULL, NULL) : NULL;
       break;
     }
@@ -223,8 +223,8 @@ gst_wasapi_src_get_property (GObject * object, guint prop_id,
       g_value_set_enum (value, gst_wasapi_erole_to_device_role (self->role));
       break;
     case PROP_DEVICE:
-      g_value_take_string (value, self->device ?
-          g_utf16_to_utf8 (self->device, -1, NULL, NULL, NULL) : NULL);
+      g_value_take_string (value, self->device_strid ?
+          g_utf16_to_utf8 (self->device_strid, -1, NULL, NULL, NULL) : NULL);
       break;
     default:
       G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
@@ -306,13 +306,13 @@ gst_wasapi_src_open (GstAudioSrc * asrc)
    * For example, perhaps we should automatically switch to the new device if
    * the default device is changed and a device isn't explicitly selected. */
   if (!gst_wasapi_util_get_device_client (GST_ELEMENT (self), TRUE,
-          self->role, self->device, &client)) {
-    if (!self->device)
+          self->role, self->device_strid, &client)) {
+    if (!self->device_strid)
       GST_ELEMENT_ERROR (self, RESOURCE, OPEN_READ, (NULL),
           ("Failed to get default device"));
     else
       GST_ELEMENT_ERROR (self, RESOURCE, OPEN_READ, (NULL),
-          ("Failed to open device %S", self->device));
+          ("Failed to open device %S", self->device_strid));
     goto beach;
   }
 
